# duckdb-level-pivot

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml  release.yml
src/: level_pivot_extension.cpp
src/catalog/: level_pivot_catalog.cpp  level_pivot_schema.cpp  level_pivot_table_entry.cpp
src/core/: key_parser.cpp  key_pattern.cpp
src/functions/: level_pivot_create_table.cpp  level_pivot_delete.cpp  level_pivot_dirty_tables.cpp  level_pivot_insert.cpp  level_pivot_scan.cpp  level_pivot_update.cpp
src/include/: key_parser.hpp  key_pattern.hpp  level_pivot_catalog.hpp  level_pivot_delete.hpp  level_pivot_extension.hpp  level_pivot_insert.hpp  level_pivot_scan.hpp  level_pivot_schema.hpp  level_pivot_sink_helpers.hpp  level_pivot_storage.hpp  level_pivot_table_entry.hpp  level_pivot_transaction.hpp  level_pivot_update.hpp  level_pivot_utils.hpp  simd_parser.hpp
src/storage/: level_pivot_storage.cpp  level_pivot_transaction.cpp
test/benchmark/: bench_data_gen.sql  bench_setup.sql  bench_utils.sh  run_benchmarks.sh
test/benchmark/benchmarks/: batch_insert.sh  delete_batch.sh  delete_single.sh  filtered_scan.sh  full_scan.sh  prefix_scan.sh  single_insert.sh  update_same_identity.sh
test/sql/: level_pivot.test
